2004-05-06  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-print-quote): Call ps-value-string.
	(ps-value-string): New fun.

2004-05-06  Juanma Barranquero  <lektu@terra.es>

	* help-fns.el (help-argument-name): Default to bold; don't inherit
	from font-lock-variable-name-face.
	(help-do-arg-highlight): Grok also ARGth occurrences in the docstring.

	* ehelp.el (electric-help-command-loop): Check whether the last
	character is visible, not (point-max).

2004-05-05  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char): Copy the character with text
	properties and overlays into the first line, and call
	describe-text-properties on it.

2004-05-05  Stephen Eglen  <stephen@anc.ed.ac.uk>

	* iswitchb.el (iswitchb-global-map): Fix typo.
	Remove unwanted ###autoloads from source file.

2004-05-05  Lars Hansen  <larsh@math.ku.dk>

	* wdired.el (wdired-change-to-wdired-mode): Quote wdired-mode-hook
	in run-hooks.  Use substitute-command-keys in message.
	(wdired-abort-changes): Add message.

2004-05-03  Michael Mauger  <mmaug@yahoo.com>

	* emacs/lisp/progmodes/sql.el (sql-xemacs-p, sql-emacs19-p)
	(sql-emacs20-p): Remove.
	(sql-mode-syntax-table): Use shared GNU EMacs/XEmacs syntax.
	(sql-builtin-face, sql-doc-face): Remove.
	(sql-mode-ansi-font-lock-keywords)
	(sql-mode-oracle-font-lock-keywords)
	(sql-mode-postgres-font-lock-keywords)
	(sql-mode-linter-font-lock-keywords)
	(sql-mode-ms-font-lock-keywords)
	(sql-mode-mysql-font-lock-keywords): Use standard fonts.
	(sql-product-font-lock): Fix font-lock reset when font rules change.
	(sql-highlight-product): Remove incorrect font-lock reset logic.

2004-05-04  Jonathan Yavner  <jyavner@member.fsf.org>

	* ses.el (ses-set-parameter): Fix typo.

2004-05-04  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-read-internal): Fix call to read-file-name for edit.
	Must expand directory for completion to work; and don't mess with
	process-environment.