@@ -3501,6 +3501,7 @@ The table depends on the current ps-print setup."
      #'ps-print-quote
      (list
       (concat "\n;;; ps-print version " ps-print-version "\n")
+      (ps-comment-string "ps-print-emacs-type" ps-print-emacs-type)
       '(25 . ps-print-color-p)
       '(25 . ps-lpr-command)
       '(25 . ps-lpr-switches)
@@ -3672,6 +3673,11 @@ If `ps-prefix-quote' is nil, it's set to t after generating string."
 	 (format "'%S" val))
 	(t
 	 (format "%S" val))))
+
+
+(defun ps-comment-string (str value)
+  "Return a comment string like \";; STR = VALUE\\n\"."
+  (concat ";; " str " = " (ps-value-string value) "\n"))
 
 
 (defun ps-value (alist-sym key)
