@@ -1,7 +1,8 @@
 2004-05-06  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
 
 	* ps-print.el (ps-print-quote): Call ps-value-string.
-	(ps-value-string): New fun.
+	(ps-setup): Call ps-comment-string.
+	(ps-value-string, ps-comment-string): New funs.
 
 2004-05-06  Juanma Barranquero  <lektu@terra.es>
 
